--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <h1 class="title"><img src="./logo.png" /></h1>
     <div id="show-time">0 seconds</div>
-
+    <ul>
+      <a class="blog" href="blog.html">Blog</a>
+    </ul>
     <div class="box-container">
       <div id="question"></div>
 
